# MarC

./: .gitignore  .gitmodules  AssemblyIdeas.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  callgrind.out.12594  compile_commands.json  mcd.sh  runCallgrind.sh  test.py
MarCmd/: CMakeLists.txt  copyHelloWorld.mca  testcode.mca  testcode.mcas
MarCmd/include/: AutoExecutableLoader.h  CmdArgParser.h  CurrExePath.h  MarCmdBuilder.h  MarCmdDisassembler.h  MarCmdExeInfoLoader.h  MarCmdFlags.h  MarCmdHelp.h  MarCmdInterpreter.h  MarCmdLiveAsmInterpreter.h  MarCmdMode.h  MarCmdModuleAdder.h  MarCmdSettings.h  PermissionGrantPrompt.h
MarCmd/include/Debugger/: ConsoleGetChar.h  ConsoleHelper.h  ConsoleWindow.h  DebugWindow.h  Debugger.h
MarCmd/src/: AutoExecutableLoader.cpp  EntryPoint.cpp  MarCmdBuilder.cpp  MarCmdDisassembler.cpp  MarCmdExeInfoLoader.cpp  MarCmdInterpreter.cpp  MarCmdLiveAsmInterpreter.cpp  MarCmdModuleAdder.cpp  PermissionGrantPrompt.cpp  main.cpp
MarCmd/src/Debugger/: ConsoleHelper.cpp  ConsoleWindow.cpp  DebugWindow.cpp  Debugger.cpp
MarCore/: CMakeLists.txt
MarCore/include/: AsmInstructions.h  AsmTokenizer.h  AsmTokenizerTypes.h  Assembler.h  AssemblerOutput.h  AssemblerTypes.h  BytecodeTypes.h  CodeFileReader.h  Compiler.h  CompilerTypes.h  ConvertInPlace.h  DisAsmTypes.h  Disassembler.h  ExecutableInfo.h  ExecutableLoader.h  ExternalFunction.h  Flags.h  Interpreter.h  InterpreterMemory.h  Linker.h  LinkerOutput.h  Macro.h  MarCore.h  Memory.h  Module.h  ModuleInfo.h  ModuleLoader.h  ModuleLocator.h  ModulePack.h  SearchAlgorithms.h  Serializer.h  VirtualAsmTokenList.h  unused.h
MarCore/include/errors/: AsmTokenizerError.h  AssemblerError.h  InterpreterError.h  LinkerError.h  MacroExpansionError.h  MarCoreError.h
MarCore/include/exceptions/: MarCoreException.h
MarCore/include/fileio/: ExtensionLocator.h  ModuleLocator.h  Serializer.h
MarCore/include/runtime/: ExternalFunction.h  Interpreter.h
MarCore/include/types/: AsmTokenizerTypes.h  AssemblerTypes.h  BytecodeTypes.h  DisAsmTypes.h  InterpreterMemory.h  Macro.h
MarCore/src/: AsmInstructions.cpp  AsmTokenizer.cpp  AsmTokenizerTypes.cpp  Assembler.cpp  AssemblerOutput.cpp  AssemblerTypes.cpp  BytecodeTypes.cpp  CodeFileReader.cpp  Compiler.cpp  CompilerTypes.cpp  DisAsmTypes.cpp  Disassembler.cpp  ExecutableInfo.cpp  ExecutableLoader.cpp  ExtensionLocator.cpp  Interpreter.cpp  Linker.cpp  LinkerOutput.cpp  MarCore.cpp  Memory.cpp  ModuleInfo.cpp  ModuleLoader.cpp  ModuleLocator.cpp  ModulePack.cpp  VirtualAsmTokenList.cpp
MarCore/src/fileio/: CodeFileReader.cpp  ExecutableLoader.cpp  ExtensionLocator.cpp  ModuleLoader.cpp  ModuleLocator.cpp
MarCore/src/runtime/: Interpreter.cpp
MarCore/src/types/: AsmTokenizerTypes.cpp  AssemblerTypes.cpp  BytecodeTypes.cpp  DisAsmTypes.cpp
docs/: MarC.md  MarCembly.md  MarCmd.md
examples/: GameOfLife.mca  GameOfLife.mce  HelloWorld.mca  array.mca  branching.mca  calculator.mca  copyString.mca  dynMemory.mca  fibonacci.mca  fibonacci_no_recursion.mca  function_high.mca  function_low.mca  scanPrint.mca  std.mca  switch.mca
stdlib/std/: CMakeLists.txt  std-control.mca  std-ext.mca  std-ins.mca  std.cpp  std.mca
tests/: arithmetics.mca  arithmetics.txt  datatypeSizes.mca  datatypeSizes.txt  dereference.mca  dereference.txt  dynamicMemory.mca  dynamicMemory.txt  dynamicStack.mca  dynamicStack.txt  exit.mca  exitCode.mca  exitCode.txt  externalFunctions.mca  externalFunctions.txt  functions.mca  functions.txt  jumps.mca  jumps.txt  typeConversion.mca  typeConversion.txt
vscExtensions/marcembly-lang/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscExtensions/marcembly-lang/syntaxes/: marcembly.tmLanguage.json
